feat(recipes): soporte de busqueda traducida por idioma
